# backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  cloudbuild.yaml  compose.yaml  dockerfile  dockerfile.prod  pyproject.toml  run.sh
docs/: agent.md  risk.md  基本設計.md
docs/plan/: floating-whising-newt.md
docs/vertex_ai_setup/: implementation_plan.md  task.md
src/backend/: __init__.py  main.py  test_vertex.py
src/backend/api/v1/: router.py
src/backend/api/v1/endpoints/: agent_test.py  analyze.py  appraisals.py  health.py
src/backend/core/: config.py  firebase.py  firestore.py  llm_callbacks.py  logging.py  serpapi.py  storage.py
src/backend/features/agent/: graph.py  state.py
src/backend/features/agent/price/: node.py  schema.py
src/backend/features/agent/search/: __init__.py  node.py  schema.py
src/backend/features/agent/vision/: node.py  schema.py
